Fixed Sizing Error
Forgot to check 1920 x 1080 size and image was too big. Also removed overflow-x.

--- a/public/style.css
+++ b/public/style.css
@@ -185,7 +185,7 @@ html {
 
 @media only screen and (orientation: landscape) and (min-width:1000px) {
     .modal-content {
-        width: 45vw;
+        width: 35vw;
     }
 
     #product-container{
@@ -200,9 +200,6 @@ html {
 
     h4{
         font-size:1.2vw;
-    }
-    .modal-content {
-        width: 40vw;
     }
 
     #product-container{
